# bless_server

./: .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  COPYRIGHT  README.md  manage.py  pyproject.toml  quran_server.code-workspace.dist  setup.cfg
.github/: dependabot.yml
bless_server/: asgi.py  settings.py  urls.py  wsgi.py
bless_server/templates/: base.html
dquran/: admin.py  apps.py  models.py  serializers.py  test_models.py  urls.py  views.py
dquran/fixtures/: README.md  dquran.An-Nas.yaml  dquran.An-Nas_dan_Al-Alaq.yaml  quran.An-Nas.yaml
dquran/migrations/: 0001_initial.py  0002_alter_quran_surat.py  0003_alter_quran_surat.py  0004_abstractayatship_ayat_ayattranslation_surat_and_more.py  0005_delete_ayattranslation_delete_translationversion.py  0006_remove_surat_ayats_delete_ayatship.py  0007_delete_abstractayatship.py  0008_ayatship_surat_ayats.py  0009_alter_ayatship_options_alter_surat_options.py  0010_surat_opened_with_basmallah.py  0011_alter_ayatship_unique_together.py  0012_remove_surat_opened_with_basmallah.py
dquran/templates/quran/: ayat_view.html  ayatship_list.html  quran_list.html  surat_list.html
dquran/templatetags/: __init__.py  dtajwid.py
duser/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
duser/migrations/: 0001_initial.py
duser/templates/duser/: home.html  login_user.html  register_user.html
quran/: admin.py  apps.py  models.py  urls.py  views.py
quran/migrations/: 0002_alter_quran_surat.py  0003_alter_quran_surat.py
quran/templates/quran/: quran_list.html
quran_server/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
templates/: base.html  navbar.html
