[tool.poetry]
name = "bless-server"
version = "0.9.0"
description = "Server API used for Bless app"
authors = ["Iqbal Syifa Mahmuda <bal.mahmuda@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bless_server" },
    { include = "manage.py" },
    { include = "dquran" },
    { include = "duser" },
]
exclude = ["dquran/fixtures"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~4.2.4"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
xhtml2pdf = "^0.2.11"
django-treebeard = "^4.7"
psycopg2 = "^2.9.7"
django-modeltranslation = "^0.18.11"
django-htmx = "^1.16.0"
django-extensions = "^3.2.3"
django-widget-tweaks = "^1.4.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"

[tool.poetry.scripts]
bless-server-manage = "manage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
